--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -12,7 +12,7 @@
 
         <div class="row">
 	  	  <div class="col-lg-12">
-	  		<div class="alert alert-danger confirm-type-message" role="alert">
+	  		<div class="alert alert-danger confirm-type-message" role="alert" style="display:none">
 	  		  <span>{% trans "Confirm" %}</span>
 	  		  <div class="pull-right">
 			    <button type="button" class="btn btn-danger btn-sm btn-no">{% trans "no" %}</button>
@@ -24,7 +24,7 @@
 	  
 	  {%for appliance in appliance_list%}
 	    <a data-ref="{{appliance.id}}" href="/{{role}}appliance/{{appliance.id}}/index" class="list-group-item list-appliance-item">
-	      <strong>{{appliance.type}}</strong>
+	      <strong>{% trans appliance.type %}</strong>
 	      {%if role == "admin/"%}
 	      <i class="icon-trash pull-right"></i>
 	      {%endif%}
