--- a/templates/admin/appliance/create.html
+++ b/templates/admin/appliance/create.html
@@ -3,7 +3,7 @@
 <form id="appliance" data-type="{{type_id}}" role="form" action="/admin/appliance/{{type_id}}/create" method="POST">{% csrf_token %}
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <h4 class="modal-title" id="myModalLabel">{% trans 'Create repair'%} -- {{type}}</h4>
+  <h4 class="modal-title" id="myModalLabel">{% trans 'Create'%} -- {% trans type%}</h4>
 </div>
 <div class="modal-body">
   <div id="rootwizard">
@@ -18,8 +18,8 @@
 	  </div>
 	</div>
 	<div class="text-center" style="margin-bottom:5px;margin-top:0px;">
-      <div class="btn btn-default btn-sm btn-previous"><i class="icon-chevron-left"></i> Back</div>
-      <div class="btn btn-default btn-sm btn-next">Next <i class="icon-chevron-right"></i></div>
+      <div class="btn btn-default btn-sm btn-previous"><i class="icon-chevron-left"></i> {% trans 'Back'%}</div>
+      <div class="btn btn-default btn-sm btn-next">{% trans 'Next'%} <i class="icon-chevron-right"></i></div>
     </div>
 	<div class="progress" style="height:5px">
       <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 60%">
@@ -28,11 +28,11 @@
 	<div class="tab-content">
 	    <div class="tab-pane" id="tab1">
 	      <div class="form-group">
-		    <label for="input_title">Title</label>
-		    <input type="text" class="form-control" id="input_title" name="input_title" placeholder="title">
+		    <label for="input_title">{% trans 'Title'%}</label>
+		    <input type="text" class="form-control" id="input_title" name="input_title" placeholder="{% trans 'Title'%}">
 		  </div>
 		  <div class="form-group">
-		    <label for="input_thumbnail">Thumbnail</label>
+		    <label for="input_thumbnail">{% trans 'Thumbnail'%}</label>
 		    <div class="container-fuild">
 		      <div class="row">
 		        <div class="col-lg-6">
@@ -43,11 +43,11 @@
 	                <div class="fileupload-preview fileupload-exists img-thumbnail" style="width: 200px; max-height: 150px"></div>
 	                <div>
 	                  <span class="btn btn-default btn-file">
-	                    <span class="fileupload-new">Select image</span>
-	                    <span class="fileupload-exists">Change</span>
+	                    <span class="fileupload-new">{% trans 'Select image'%}</span>
+	                    <span class="fileupload-exists">{% trans 'Change'%}</span>
 	                    <input type="file" name="thumbnail" id="thumbnail">
 	                  </span>
-	                  <a class="btn btn-default fileupload-exists" data-dismiss="fileupload" href="#">Remove</a>
+	                  <a class="btn btn-default fileupload-exists" data-dismiss="fileupload" href="#">{% trans 'Remove'%}</a>
 	                </div>
 	              </div>
 		        </div>
@@ -67,8 +67,8 @@
   
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'Cancel'%}</button>
-  <button type="button" class="btn btn-primary btn-save">{% trans 'Save'%}</button>
+  <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'cancel'%}</button>
+  <button type="button" class="btn btn-primary btn-save">{% trans 'save'%}</button>
 </div>
 </form>
 
