--- a/templates/admin/appliance/index_none.html
+++ b/templates/admin/appliance/index_none.html
@@ -1,7 +1,7 @@
 {% extends 'base/_base.html' %}
 {% load i18n %}
 {% load static from staticfiles %}
-{% block title %}Appliance repair{% endblock %}
+{% block title %}{%trans 'Appliance repair' %}{% endblock %}
  
 {% block headerCssBlock %}
   
@@ -16,12 +16,12 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a class="active">Appliance repair</a></li>
+  <li><a class="active">{%trans 'Appliance repair' %}</a></li>
 </ol>
 </div>
 </div>
 </div>
 {% endblock %}
 {% block main %}
-	<p class="lead">There has no Appliance type, You can add type on the left panel</p>
+	<p class="lead">{%trans 'There has no Appliance type, You can add type on the left panel' %}</p>
 {% endblock %}
