--- a/templates/admin/appliance/single_view.html
+++ b/templates/admin/appliance/single_view.html
@@ -8,7 +8,7 @@
 	<div class="row">
 	<div class='col-lg-12'>
 	<ol class="breadcrumb breadcrumb_reset">
-	  <li><a href="javascript:history.back()">{{type}} repair</a></li>
+	  <li><a href="javascript:history.back()">{% trans type %} {%trans 'repair' %}</a></li>
 	  <li class="active">{{title}}</li>
 	</ol>
 	</div>
