fix appliance view bug

--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -52,8 +52,8 @@
 	<span class="totop"><a href="#"><i class="icon-chevron-up"></i></a></span> 
 	<div id="footer">
       <div class="container">
-        <h4>{%trans "Technology Support By Yuxiaoyang"%}</h4>
-        <h4>QQ :641991945, {%trans 'Email'%}:newton1919@sina.com</h4>
+        <h4>{%trans "Technology Support By Feiyu"%}</h4>
+        <h4>QQ :641991945, {%trans 'Email'%}:newton1919@gmail.com</h4>
       </div>
     </div>
 	
