--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -25,7 +25,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-laptop"></i> <strong>{%trans 'Appliance'%}</strong> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   {%for appliance in appliance_list%}
-                  <li><a href="/{{role}}appliance/{{appliance.id}}/index"><strong>{{appliance.type}}</strong></a></li>
+                  <li><a href="/{{role}}appliance/{{appliance.id}}/index"><strong>{%trans appliance.type%}</strong></a></li>
                   <li class="divider"></li>
                   {%endfor%}
                 </ul>
