add link on login page

--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -20,7 +20,7 @@
     <div class="login-wraper">
       <div class="login-container active">
         <div class="logo-brand">
-      	  <a><i class="icon-windows"></i> <span><strong>iRepair</strong></span></a>
+      	  <a href="/"><i class="icon-windows"></i> <span><strong>iRepair</strong></span></a>
   		</div>
   		{% include 'admin/_login.html' %}
 	  </div>
