屏幕变小时sidebar隐藏

--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load url from future %}
-<div class="panel panel-black">
+<div class="panel panel-black hidden-xs hidden-sm">
   <div class="panel-heading"><strong>{% trans "Appliance"%} {% trans "repair" %}</strong></div>
   <div class="panel-body">
     <div class="list-group sidenav">
@@ -36,7 +36,7 @@
 	</div>
   </div>
 </div>
-<div class="panel panel-black">
+<div class="panel panel-black hidden-xs hidden-sm">
   <div class="panel-heading">
     <strong>{% trans "Company" %}</strong>
   </div>
@@ -77,7 +77,7 @@
 	</div>
   </div>
 </div>
-<div class="panel panel-black">
+<div class="panel panel-black hidden-xs hidden-sm">
   <div class="panel-heading">
     <strong>{% trans "Friendly Link" %}</strong>
   </div>
