--- a/templates/admin/appliance/type_create.html
+++ b/templates/admin/appliance/type_create.html
@@ -1,13 +1,21 @@
-{% extends "base/_form.html" %}
 {% load i18n %}
-{% block form_id %}appliance_type{% endblock %}
-{% block form_action %}/admin/appliance_type/create{% endblock %}
-{% block modal-header %}
-<div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-  <h4 class="modal-title strong" id="myModalLabel">{% trans "Create appliance type" %}</h4>
-</div>
-{% endblock %}
-{% block modal-footer %}
-	<button type="submit" class="btn btn-primary form-control">{% trans "Ok" %}</button>
-{% endblock %}
+<form role="form" id="{{form.form_id}}"
+        name="{{form.name}}"
+        autocomplete="{{form.autocomplete}}"
+        class="{{form.class}}"
+        action="/admin/appliance_type/create"
+        method="POST"
+>{% csrf_token %}
+  <div class="modal-header">
+	<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+	<h4 class="modal-title strong" id="myModalLabel">{% trans "Create appliance type" %}</h4>
+  </div>
+  <div class="modal-body clearfix">
+  	<fieldset>
+	  {% include "base/_form_fields.html" %}
+    </fieldset>
+  </div>
+  <div class="modal-footer">
+    <button type="submit" class="btn btn-primary form-control">{% trans "Ok" %}</button>
+  </div>
+</form>
