--- a/templates/admin/detail.html
+++ b/templates/admin/detail.html
@@ -25,5 +25,6 @@
 </div>
 {% endblock %}
 {% block main %}
+	<div style="text-align:center;font-size:20px"><strong>{{name}}</strong></div>
     {{desc}}
 {% endblock %}
