--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,6 @@
 
 {% block mainPanelTitle %}{% trans "Company" %}{% endblock %}
 {% block main %}
+	<div style="text-align:center;font-size:20px"><strong>{{name}}</strong></div>
     {{company_desc}}
 {% endblock %}
