fix note-editable height bug on modal

--- a/templates/admin/appliance/create.html
+++ b/templates/admin/appliance/create.html
@@ -61,7 +61,7 @@
 		  </div>
 	    </div>
 	    <div class="tab-pane" id="tab2">
-	      <div class="form-group" style="height:600px">
+	      <div class="form-group" style="margin-bottom:0px;">
 	      {{form.content}}
 	      </div>
 	    </div>
