--- a/templates/admin/appliance/update2.html
+++ b/templates/admin/appliance/update2.html
@@ -1,8 +1,6 @@
 {% load i18n %}
 {% load url from future %}
-<form id="appliance" data-type="{{type_id}}" data-id="{{appliance_id}}" role="form" action="/admin/appliance/{{type_id}}/{{appliance_id}}/update" 
-	  method="POST"
-	  enctype="multipart/form-data">{% csrf_token %}
+<form id="appliance" data-type="{{type_id}}" data-id="{{appliance_id}}" role="form" action="/admin/appliance/{{type_id}}/{{appliance_id}}/update" method="POST">{% csrf_token %}
 <div class="modal-header">
   <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
   <h4 class="modal-title" id="myModalLabel">{% trans 'Update'%} -- {% trans type%}</h4>
@@ -30,8 +28,8 @@
 	<div class="tab-content">
 	    <div class="tab-pane" id="tab1">
 	      <div class="form-group">
-	      	{{form.input_title.label_tag}}
-	      	{{form.input_title}}
+		    <label for="input_title">{% trans 'Title'%}</label>
+		    <input type="text" class="form-control" id="input_title" name="input_title" placeholder="title" value="{{title}}">
 		  </div>
 		  <div class="form-group">
 		    <label for="input_thumbnail">{% trans 'Thumbnail'%}</label>
@@ -60,8 +58,8 @@
 		  </div>
 	    </div>
 	    <div class="tab-pane" id="tab2">
-	      <div class="form-group" style="margin-bottom:0px;">
-	      {{form.content}}
+	      <div class="summernote">
+	      {{content}}
 	      </div>
 	    </div>
 		
@@ -72,7 +70,7 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" data-dismiss="modal">{% trans 'cancel'%}</button>
-  <button type="submit" class="btn btn-primary btn-save">{% trans 'save'%}</button>
+  <button type="button" class="btn btn-primary btn-save">{% trans 'save'%}</button>
 </div>
 </form>
 
@@ -95,16 +93,22 @@ $(function(){
 				previousSelector:".btn-previous",
 				onNext: function(tab, navigation, index) {
 			        if (index === 1) {
-			          if (!$("#id_input_title").val()) {
-			            $("#id_input_title").focus();
-			            $("#id_input_title").addClass("has-error");
+			          if (!$("#input_title").val()) {
+			            $("#input_title").focus();
+			            $("#input_title").addClass("has-error");
 			            return false;
 			          }
 			        }
 			        return true;
 			 	},
 	});
-	
+	if ($('.summernote').length) {
+	      $('.summernote').summernote({
+	        height: 600,
+	        focus: true,
+	        toolbar: [['style', ['style']], ['style', ['bold', 'italic', 'underline', 'clear']], ['fontsize', ['fontsize']], ['color', ['color']], ['para', ['ul', 'ol', 'paragraph']], ['height', ['height']], ['insert', ['picture', 'link']], ['table', ['table']], ['fullscreen', ['fullscreen']]]
+	      });
+	};
 	//save text
 	$('#appliance').find('.btn-save').click(function(){
 		var type = $('#appliance').attr("data-type");
