--- a/templates/admin/appliance/index.html
+++ b/templates/admin/appliance/index.html
@@ -41,7 +41,7 @@
 	<div class="col-lg-12">
 	  <div class="btn-group pull-right">
 		{% for table_action in table_actions %}
-          <a {% if table_action.modal %}data-toggle="modal" data-target=".myModal" {%endif%} href="/admin/appliance/{{type_id}}/{{table_action.name}}" class="btn btn-default"><i class="{{table_action.icon}}"></i>  {{table_action.verbose_name}}</a>
+          <a {% if table_action.modal %}data-toggle="modal" data-target=".myModal" {%endif%} href="/admin/appliance/{{type_id}}/{{table_action.name}}" class="btn btn-default table_actions {{table_action.classes}}"><i class="{{table_action.icon}}"></i>  {{table_action.verbose_name}}</a>
         {% endfor%}
 	  </div>
 	</div>
@@ -51,7 +51,7 @@
   <table class="table table-bordered table-hover table-striped" id="dataTable1">
     <thead>
       <th class="check-header hidden-xs">
-        <label><input id="checkAll" name="checkAll" type="checkbox"><span></span></label>
+        <label><input id="checkAll" name="checkAll" type="checkbox" class="multi_select_column"><span></span></label>
       </th>
       {% for col in columns %}
       <th>{{col.verbose_name}}</th>
@@ -60,9 +60,9 @@
     </thead>
     <tbody>
       {% for obj in objs %}
-      <tr class="has_context" id={{obj.id}}>
+      <tr class="has_context" id='{{obj.id}}'>
         <td class="check hidden-xs">
-          <label><input name="optionsRadios1" type="checkbox" value="option1"><span></span></label>
+          <label><input name="optionsRadios1" type="checkbox" value="{{obj.id}}"><span></span></label>
         </td>
         {% for value_dic in obj.display_values %}
           {%if value_dic.ajax%}
