--- a/templates/base/_base.html
+++ b/templates/base/_base.html
@@ -68,6 +68,7 @@
   	<script src="{% static 'js/jquery.bootstrap.wizard.min.js' %}" type="text/javascript"></script>
 	{% block headerJsBlock %}
 	{% endblock %}
+	<script src="{% static 'js/custom.tables.js' %}" type="text/javascript"></script>
 	<script src="{% static 'js/custom.js' %}" type="text/javascript"></script>
 	
 	
