--- a/templates/404.html
+++ b/templates/404.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 {% load static from staticfiles %}
+{% load i18n %}
 <html>
   
 <head>
     <title>
-      se7en - Dashboard
+      irepair--404
     </title>
-<!--     <link href="{% static 'css/bootstrap.min.css' %}" media="all" rel="stylesheet" type="text/css" /> -->
-<!--     <link href="{% static 'css/font-awesome.css' %}" media="all" rel="stylesheet" type="text/css" /> -->
-<!--     <link href="{% static 'css/se7en-font.css' %}" media="all" rel="stylesheet" type="text/css" /> -->
-<!--     <link href="{% static 'css/style.css' %}" media="all" rel="stylesheet" type="text/css" /> -->
+    <link href="{% static 'css/bootstrap.min.css' %}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/font-awesome.css' %}" media="all" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/style.css' %}" media="all" rel="stylesheet" type="text/css" />
     
-<!--     <script src="{% static 'js/jquery-2.1.1.js' %}" type="text/javascript"></script> -->
-<!--     <script src="{% static 'js/jquery-ui.js' %}" type="text/javascript"></script> -->
-<!--     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script> -->
-<!--     <script src="{% static 'js/modernizr.custom.js' %}" type="text/javascript"></script> -->
+    <script src="{% static 'js/jquery-2.1.1.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery-ui.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/modernizr.custom.js' %}" type="text/javascript"></script>
     
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   </head>
@@ -25,9 +25,9 @@
         404
       </h1>
       <h2>
-        Coming soon.
+        {% trans "It looks like you're lost" %}
       </h2>
-      <a class="btn btn-lg btn-default-outline" href="javascript:history.back()"><i class="icon-home"></i>Go to the history back</a>
+      <a class="btn btn-lg btn-default-outline" href="javascript:history.back()"><i class="icon-home"></i>{% trans "Go to the history back" %}</a>
     </div>
     <!-- End Login Screen -->
   </body>
