--- a/templates/admin/appliance/view.html
+++ b/templates/admin/appliance/view.html
@@ -16,7 +16,9 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a href="javascript:history.back()" class="active">{% trans type %} {%trans 'repair' %}</a></li>
+  <li><a href="javascript:history.back()" class="active">
+  <span class="label label-danger" style="font-size:15px;"><strong>{% trans type %} {%trans 'repair' %}</strong></span>
+  </a></li>
 </ol>
 </div>
 </div>
