--- a/templates/admin/company.html
+++ b/templates/admin/company.html
@@ -16,7 +16,9 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a class="active">{% trans "Company" %}</a></li>
+  <li><a class="active">
+  <span class="label label-danger" style="font-size:15px;"><strong>{% trans "Company" %}</strong></span>
+  </a></li>
 </ol>
 </div>
 </div>
