--- a/templates/admin/company_contact.html
+++ b/templates/admin/company_contact.html
@@ -16,8 +16,8 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a>{% trans "Company" %}</a></li>
-  <li><a class="active">{% trans "Contact" %}</a></li>
+  <li><a><span class="label label-danger" style="font-size:15px;"><strong>{% trans "Company" %}</strong></span></a></li>
+  <li><a class="active"><span class="label label-danger" style="font-size:15px;"><strong>{% trans "Contact" %}</strong></span></a></li>
 </ol>
 </div>
 </div>
