--- a/templates/base/_sidebar.html
+++ b/templates/base/_sidebar.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
-<div class="panel panel-black hidden-xs hidden-sm">
-  <div class="panel-heading"><strong>{% trans "Appliance"%} {% trans "repair" %}</strong></div>
+<div class="panel panel-default hidden-xs hidden-sm">
+  <div class="panel-heading"><span class="label label-danger" style="font-size:15px;"><strong>{% trans "Appliance"%} {% trans "repair" %}</strong></span></div>
   <div class="panel-body">
     <div class="list-group sidenav">
 	  
@@ -36,9 +36,9 @@
 	</div>
   </div>
 </div>
-<div class="panel panel-black hidden-xs hidden-sm">
+<div class="panel panel-default hidden-xs hidden-sm">
   <div class="panel-heading">
-    <strong>{% trans "Company" %}</strong>
+    <span class="label label-danger" style="font-size:15px;"><strong>{% trans "Company" %}</strong></span>
   </div>
   <div class="panel-body">
     <div class="list-group sidenav">
@@ -77,9 +77,9 @@
 	</div>
   </div>
 </div>
-<div class="panel panel-black hidden-xs hidden-sm">
+<div class="panel panel-default hidden-xs hidden-sm">
   <div class="panel-heading">
-    <strong>{% trans "Friendly Link" %}</strong>
+    <span class="label label-danger" style="font-size:15px;"><strong>{% trans "Friendly Link" %}</strong></span>
   </div>
   <div class="panel-body">
     <div class="list-group sidenav">
