--- a/templates/admin/appliance/index_none.html
+++ b/templates/admin/appliance/index_none.html
@@ -16,7 +16,7 @@
 <div class="row">
 <div class='col-lg-12'>
 <ol class="breadcrumb breadcrumb_reset">
-  <li><a class="active">{%trans 'Appliance repair' %}</a></li>
+  <li><a class="active"><span class="label label-danger" style="font-size:15px;"><strong>{%trans 'Appliance repair' %}</strong></span></a></li>
 </ol>
 </div>
 </div>
