--- a/templates/admin/appliance/single_view.html
+++ b/templates/admin/appliance/single_view.html
@@ -8,8 +8,8 @@
 	<div class="row">
 	<div class='col-lg-12'>
 	<ol class="breadcrumb breadcrumb_reset">
-	  <li><a href="javascript:history.back()">{% trans type %} {%trans 'repair' %}</a></li>
-	  <li class="active">{{title}}</li>
+	  <li><a href="javascript:history.back()"><span class="label label-danger" style="font-size:15px;"><strong>{% trans type %} {%trans 'repair' %}</strong></span></a></li>
+	  <li class="active"><span class="label label-danger" style="font-size:15px;"><strong>{{title}}</strong></span></li>
 	</ol>
 	</div>
 	</div>
