--- a/templates/base/_headbar.html
+++ b/templates/base/_headbar.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 headcol">
-      <img class="headimg" src="{% static 'images/image-iso4.png' %}">
+      <img class="headimg" src="{% static 'images/background/bg2.png' %}">
     </div>
   </div>
 </div>
