--- a/templates/base/_navbar.html
+++ b/templates/base/_navbar.html
@@ -6,7 +6,7 @@
 <div class="container">
 <div class="row">
   <div class="col-lg-10 col-md-10 col-xs-10 col-lg-offset-1 col-md-offset-1 col-xs-offset-1">
-	<div class="navbar  navbar-inverse  my-navbar" role="navigation">
+	<div class="navbar  navbar-default  my-navbar" role="navigation">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,7 +19,7 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="{% url 'gallery:index' %}"><i class="icon-home"></i> <strong>{%trans 'Home'%}</strong></a></li>
+              <li><a href="{% url 'gallery:index' %}"><i class="icon-home"></i> <strong>{%trans 'Gallery'%}</strong></a></li>
               <li><a href="/{{role}}company/contact"><i class="icon-comments"></i> <strong>{%trans 'Contact'%}</strong></a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-laptop"></i> <strong>{%trans 'Appliance'%}</strong> <b class="caret"></b></a>
