--- a/gallery/static/gallery/css/demo.css
+++ b/gallery/static/gallery/css/demo.css
@@ -29,3 +29,19 @@ a:hover {
 	overflow: auto;
 	color: #333;
 }
+.thumbnail_img {
+	height:190px !important;
+}
+
+::-webkit-scrollbar {
+  width: 8px; }
+
+::-webkit-scrollbar-thumb {
+  background: #bbbbbb;
+  background: rgba(0, 0, 0, 0.15);
+  border-radius: 5px; }
+
+::-webkit-scrollbar-track {
+  background: #dddddd;
+  background: rgba(0, 0, 0, 0.05); 
+}
