--- a/gallery/templates/gallery/index.html
+++ b/gallery/templates/gallery/index.html
@@ -8,7 +8,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <![endif]-->
 <meta charset="utf-8">
-<title>Bootstrap Image Gallery</title>
+<title>{% trans 'Gallery' %}</title>
 <meta name="description" content="Bootstrap Image Gallery is an extension to blueimp Gallery, a touch-enabled, responsive and customizable image and video gallery. It displays images and videos in the modal dialog of the Bootstrap framework, features swipe, mouse and keyboard navigation, transition effects, fullscreen support and on-demand content loading and can be extended to display additional content types.">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,37 +21,15 @@
 </head>
 <body>
 <div class="container">
-    <h1>Bootstrap Image Gallery Demo</h1>
-    <blockquote>
-        <p>Bootstrap Image Gallery is an extension to <a href="http://blueimp.github.io/Gallery/">blueimp Gallery</a>, a touch-enabled, responsive and customizable image &amp; video gallery.<br>It displays images and videos in the modal dialog of the <a href="http://getbootstrap.com/">Bootstrap</a> framework, features swipe, mouse and keyboard navigation, transition effects, fullscreen support and on-demand content loading and can be extended to display additional content types.</p>
-    </blockquote>
-    <form class="form-inline">
-        <div class="form-group">
-            <button id="video-gallery-button" type="button" class="btn btn-success btn-lg">
-                <i class="glyphicon glyphicon-film"></i>
-                Launch Video Gallery
-            </button>
-        </div>
-        <div class="form-group">
-            <button id="image-gallery-button" type="button" class="btn btn-primary btn-lg">
-                <i class="glyphicon glyphicon-picture"></i>
-                Launch Image Gallery
-            </button>
-        </div>
-        <div class="btn-group" data-toggle="buttons">
-          <label class="btn btn-success btn-lg">
-            <i class="glyphicon glyphicon-leaf"></i>
-            <input id="borderless-checkbox" type="checkbox"> Borderless
-          </label>
-          <label class="btn btn-primary btn-lg">
-            <i class="icon-fullscreen"></i>
-            <input id="fullscreen-checkbox" type="checkbox"> Fullscreen
-          </label>
-        </div>
-    </form>
+	<div class='row'>
+	<a href='javascript:history.back()'><i class="icon-chevron-left"></i></a>
+	<div class="checkbox pull-right">
+		<label><input id="borderless-checkbox" type="checkbox"> {%trans 'Borderless'%}</label>
+    </div>
+    </div>
     <br>
     <!-- The container for the list of example images -->
-    <div id="links"></div>
+    <div id="links" class='row'></div>
     <br>
 </div>
 <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
@@ -77,10 +55,10 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left prev">
                         <i class="icon-chevron-left"></i>
-                        Previous
+                        {%trans 'Previous'%}
                     </button>
                     <button type="button" class="btn btn-primary next">
-                        Next
+                        {%trans 'Next'%}
                         <i class="icon-chevron-right"></i>
                     </button>
                 </div>
